<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:maxLines="100"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:scrollbarAlwaysDrawVerticalTrack="true"
	    android:scrollbars="vertical"
	    tools:context=".BrotherProfile" >
	   
	    <EditText
	        android:id="@+id/nameEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:layout_marginLeft="22dp"
	        android:layout_marginTop="21dp"
	        android:ems="10"
	        android:hint="@string/Name_edit_text"
	        android:inputType="text" >
	
	        <requestFocus />
	    </EditText>
	
	    <EditText
	        android:id="@+id/positionEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/nameEditText"
	        android:layout_below="@+id/nameEditText"
	        android:layout_marginTop="14dp"
	        android:ems="10"
	        android:hint="@string/Position_edit_text"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/classEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/positionEditText"
	        android:layout_below="@+id/positionEditText"
	        android:layout_marginTop="17dp"
	        android:ems="10"
	        android:hint="@string/Class_edit_text"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/bigEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/classEditText"
	        android:layout_below="@+id/classEditText"
	        android:layout_marginTop="22dp"
	        android:ems="10"
	        android:hint="@string/Big_edit_text"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/littleEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/bigEditText"
	        android:layout_below="@+id/bigEditText"
	        android:layout_marginTop="17dp"
	        android:ems="10"
	        android:hint="@string/little_edit_text"
	        android:inputType="textPersonName" />
	
	    <EditText
	        android:id="@+id/prevPosEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/littleEditText"
	        android:layout_below="@+id/littleEditText"
	        android:layout_marginTop="22dp"
	        android:ems="10"
	        android:hint="@string/PrevPos_edit_text"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/ageEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/prevPosEditText"
	        android:layout_below="@+id/prevPosEditText"
	        android:layout_marginTop="16dp"
	        android:ems="10"
	        android:hint="@string/Age_edit_text"
	        android:inputType="number" />
	
	    <EditText
	        android:id="@+id/employEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ageEditText"
	        android:layout_below="@+id/ageEditText"
	        android:layout_marginTop="17dp"
	        android:ems="10"
	        android:hint="@string/Employment_edit_text"
	        android:inputType="text" />
	
	    <EditText
	        android:id="@+id/textbox1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/fromEditText"
	        android:layout_marginTop="35dp"
	        android:ems="10"
	        android:height="@android:dimen/thumbnail_height"
	        android:hint="@string/q1_edit_text"
	        android:inputType="textMultiLine" />
	
	    <EditText
	        android:id="@+id/textbox2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textbox1"
	        android:layout_below="@+id/textbox1"
	        android:layout_marginTop="84dp"
	        android:ems="10"
	        android:height="@android:dimen/thumbnail_height"
	        android:hint="@string/q2_edit_text"
	        android:inputType="textMultiLine" />
	
	    <Button
	        android:id="@+id/savebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/textbox2"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="55dp"
	        android:onClick="saveClicked"
	        android:text="@string/save" />

	    <EditText
	        android:id="@+id/majorEditText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/fromEditText"
	        android:layout_alignRight="@+id/fromEditText"
	        android:layout_below="@+id/employEditText"
	        android:layout_marginTop="27dp"
	        android:ems="10"
	        android:hint="@string/Major_edit_text" />

	    <EditText
	        android:id="@+id/fromEditText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/employEditText"
	        android:layout_below="@+id/majorEditText1"
	        android:layout_marginTop="43dp"
	        android:ems="10"
	        android:hint="@string/From_edit_text"
	        android:inputType="text" />
	    
	</RelativeLayout>
       </ScrollView>